--- a/SALTED-tutorial/salted-notebook.ipynb
+++ b/SALTED-tutorial/salted-notebook.ipynb
@@ -181,25 +181,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df59724c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# file_path = './water_monomers_100.xyz'\n",
-    "# trainset_frames = read(file_path, ':')\n",
-    "# properties = {\n",
-    "#     \"example_property\": {\n",
-    "#         \"target\": \"atom\",\n",
-    "#         \"values\": list(range(trainset_frames))\n",
-    "#     }\n",
-    "# }\n",
-    "# import chemiscope\n",
-    "# chemiscope.show(frames=read(file_path, ':'), properties=properties)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "9f5aea26",
    "metadata": {},
    "outputs": [],
@@ -241,19 +222,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e40f5f3-6969-493f-b8c7-835ebabd7b00",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    },
-    "tags": []
-   },
-   "source": [
-    "## Density fitting and its quality"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "cf7d732c-caf0-4c72-8757-8c8aeda22e6b",
    "metadata": {
     "slideshow": {
@@ -262,37 +230,31 @@
     "tags": []
    },
    "source": [
-    "## Understanding Density Fitting in Quantum Chemistry\n",
+    "## Density fitting (or RI) and its quality\n",
     "\n",
     "In quantum chemistry calculations, the **electron density** $\\rho(\\vec{r})$ is a fundamental quantity.\n",
     "The electron density is often expressed in terms of a **density matrix**, and for atomic orbital (AO) basis sets, the density matrix looks like this:\n",
     "$$\n",
     "\\rho (\\vec{r}) = \\sum_{I \\mu J \\nu} \\rho_{I \\mu J \\nu} \\phi_{I \\mu} (\\vec{r}) \\phi_{J \\nu}^* (\\vec{r})\n",
     "$$\n",
-    "where $\\rho_{I \\mu J \\nu}$ are density matrix elements and $\\phi_{I \\mu} (\\vec{r})$ are AO basis functions, each consisting of a radial part and an angular part (spherical harmonics)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "099d525c-df2a-4b66-a32a-3caad08121e2",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    },
-    "tags": []
-   },
-   "source": [
-    "The **Resolution of Identity (RI)** method approximates the true SCF electron density using a set of auxiliary basis functions $Q_{Im}$:\n",
+    "where $\\rho_{I \\mu J \\nu}$ are density matrix elements and $\\phi_{I \\mu} (\\vec{r})$ are AO basis functions, each consisting of a radial part and an angular part (spherical harmonics).\n",
+    "\n",
+    "The **Resolution of Identity (RI, or density fitting)** method approximates the true SCF electron density using a set of auxiliary basis functions $Q_{Im}$:\n",
     "$$\n",
     "\\rho^{\\mathrm{RI}}(\\vec{r}) = \\sum_{Im} c_{Im} Q_{Im}(\\vec{r})\n",
     "\\approx \\rho^{\\mathrm{SCF}}(\\vec{r})\n",
     "$$\n",
     "Here, $c_{Im}$ are the RI coefficients and $Q_{Im}(\\vec{r})$ are the auxiliary basis functions, each composed of radial and angular (spherical harmonics) components.\n",
+    "The RI coefficients $c_{Im}$ serve as learning targets for the SALTED model, and since these coefficients are expressed in the spherical harmonics basis, they naturally **rotate equivariantly** with molecular structure (so-called **tensorial properties**).\n",
     "\n",
-    "**Key aspects of RI in SALTED:**\n",
-    "- The RI coefficients $c_{Im}$ serve as **learning targets** for the machine learning model\n",
-    "- Since these coefficients are expressed in the spherical harmonics basis, they naturally **rotate equivariantly** with molecular structure\n",
-    "- This equivariant property is crucial for SALTED's ability to predict **tensorial properties** like electron density across different molecular orientations\n"
+    "We assess RI quality using the mean absolute error **metric**:\n",
+    "$$\n",
+    "\\delta = \\frac{\n",
+    "    \\int \\mathrm{d} \\vec{r} \\left| \\rho^{\\mathrm{SCF}}(\\vec{r}) - \\rho^{\\mathrm{RI}}(\\vec{r}) \\right|\n",
+    "}{\n",
+    "    \\int \\mathrm{d} \\vec{r} \\rho^{\\mathrm{SCF}}(\\vec{r})\n",
+    "}\n",
+    "$$\n"
    ]
   },
   {
@@ -333,30 +295,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "39663a20-6aba-4ea6-b864-604cfd6070b6",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    },
-    "tags": []
-   },
-   "source": [
-    "We assess RI quality using the mean absolute error:\n",
-    "$$\n",
-    "\\delta = \\frac{\n",
-    "    \\int \\mathrm{d} \\vec{r} \\left| \\rho^{\\mathrm{SCF}}(\\vec{r}) - \\rho^{\\mathrm{RI}}(\\vec{r}) \\right|\n",
-    "}{\n",
-    "    \\int \\mathrm{d} \\vec{r} \\rho^{\\mathrm{SCF}}(\\vec{r})\n",
-    "}\n",
-    "$$\n",
-    "\n",
-    "This metric quantifies how accurately the auxiliary basis functions reproduce the true SCF electron density."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "4f092b5f-fd4b-45bf-8d92-165f4419b318",
    "metadata": {
     "slideshow": {
@@ -375,7 +315,7 @@
     }
    ],
    "source": [
-    "# run salted command to get df errors\n",
+    "\"\"\" get RI (density fitting) errors \"\"\"\n",
     "! python3 -m salted.aims.get_df_err"
    ]
   },
@@ -394,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "496498e6-d987-4211-b92d-979e2bff5df8",
    "metadata": {
     "jupyter": {
@@ -418,7 +358,7 @@
     }
    ],
    "source": [
-    "\"\"\" Load the MAE data for density fitting, and visualize it using histogram\"\"\"\n",
+    "\"\"\" Load the MAE data for RI, and visualize it using histogram\"\"\"\n",
     "\n",
     "data_df = np.loadtxt('df_maes')\n",
     "data_df_y = data_df.T[1]\n",
@@ -451,8 +391,6 @@
    "source": [
     "## Atomic environments and Visualization\n",
     "\n",
-    "The SOAP descriptor (or atomic environment) is atom-centered, and its corresponding kernel function (the one for Gaussian process regression) is invariant to translation and rotation in real space.\n",
-    "\n",
     "![SOAP descriptor](./SOAP_illustration_with_kernel.png)\n"
    ]
   },
@@ -467,7 +405,9 @@
     "tags": []
    },
    "source": [
-    "The atomic density representation is:\n",
+    "The SOAP descriptor (or atomic environment) is atom-centered, and its corresponding kernel function (the one for Gaussian process regression) is invariant to translation and rotation in real space.\n",
+    "\n",
+    "The kernel function is constructed based on atomic density representation $\\rho(\\vec{r})$, while the atomic density representation is:\n",
     "$$\n",
     "\\rho^{i,a} (\\vec{r})\n",
     "= \\sum_j \\delta_{a,a_j}\n",
@@ -507,7 +447,8 @@
     "tags": []
    },
    "source": [
-    "In this section, we will **compute atomic environments** for all structures in the training set, **perform sparsification** using Farthest Point Sampling (FPS) to select representative atomic environments for SoR, and **visualize the distribution** of atomic environments using dimensionality reduction techniques (t-SNE) to demonstrate the quality and coverage of the selected subset.\n",
+    "Besides using the SOAP descriptor, SALTED has implemented several mathematical techniques to lift the efficiency boundary of traditional GPR methods.\n",
+    "Here we introduce the first two methods:\n",
     "\n",
     "**Subset of Regressors (SoR)** approximates the full kernel matrix using only a representative subset $M$ of training points:\n",
     "$$\n",
@@ -518,7 +459,7 @@
     "\n",
     "**Farthest Point Sampling (FPS)** is a method used to select a subset of points from a larger set such that the selected points are as far apart from each other as possible.\n",
     "This is particularly useful in scenarios where we want to ensure that the selected points represent the diversity of the original dataset.\n",
-    "\n"
+    "In SALTED we select the subset $M$ based on powerspectrum, a intermediate representation of the atomic environment.\n"
    ]
   },
   {
@@ -767,8 +708,7 @@
     "$$\n",
     "where $\\mathbf{D}^{\\lambda}$ is the Wigner D-matrix, which is a representation of the rotation group SO(3) in the spherical harmonics basis.\n",
     "\n",
-    "\n",
-    "And continuing our mathematical tricks, the **SoR** integrates with **Reproducing Kernel Hilbert Space (RKHS)** facilitates efficient Gaussian process regression in SALTED.\n",
+    "And continuing our mathematical techniques, the **SoR** integrates with **Reproducing Kernel Hilbert Space (RKHS)** facilitates efficient Gaussian process regression in SALTED.\n",
     "\n",
     "With the SoR approximation above and the RKHS theory, the original kernel matrix $K_{NN}$ can be approximated as the inner product of RKHS feature vectors $\\Psi_{ND}$:\n",
     "$$\n",
@@ -779,7 +719,7 @@
     "$$\n",
     "c_N \\approx \\Psi_{ND} \\tilde{w}_D\n",
     "$$\n",
-    "where $\\tilde{w}_D$ are the learned feature weights.\n",
+    "where $\\tilde{w}_D$ are the learned feature weights, and the dimension $D$ (correlated to the number of selected atoms in FPS) is several orders of magnitude smaller than the original number of training points $N$.\n",
     "SoR + RKHS here dramatically reduces both memory requirements and computational complexity.\n",
     "\n",
     "\n",
@@ -1295,12 +1235,12 @@
    "source": [
     "## Regression in two ways\n",
     "\n",
-    "SALTED minimizes spatial density MSE (equivalently a weighted L2 loss) between predicted and target RI coefficients:\n",
+    "SALTED minimizes spatial density MSE (equivalently a weighted L2 loss) between predicted RI coefficients $\\rho^\\mathrm{ML}$ and target RI coefficients $\\rho^\\mathrm{RI}$:\n",
     "$$\n",
     "\\begin{aligned}\n",
     "\\mathcal{L}(\\tilde{w}_D)\n",
-    "& = \\int \\mathrm{d} \\vec{r} (\\rho^\\mathrm{predict} - \\rho^\\mathrm{DF})^2 + L_2 (\\tilde{w}_D) \\\\\n",
-    "& = (\\Psi_{ND} \\tilde{w}_D - c_N^{\\mathrm{DF}})^T S_{NN} (\\Psi_{ND} \\tilde{w}_D - c_N^{\\mathrm{DF}}) + \\eta \\tilde{w}_D^T \\tilde{w}_D\n",
+    "& = \\int \\mathrm{d} \\vec{r} (\\rho^\\mathrm{ML} - \\rho^\\mathrm{RI})^2 + L_2 (\\tilde{w}_D) \\\\\n",
+    "& = (\\Psi_{ND} \\tilde{w}_D - c_N^{\\mathrm{RI}})^T S_{NN} (\\Psi_{ND} \\tilde{w}_D - c_N^{\\mathrm{RI}}) + \\eta \\tilde{w}_D^T \\tilde{w}_D\n",
     "\\end{aligned}\n",
     "$$\n",
     "\n",
@@ -1323,7 +1263,7 @@
     "$$\n",
     "\\begin{aligned}\n",
     "(\\Psi_{ND}^T S_{NN} \\Psi_{ND} + \\eta \\mathbb{I}_{DD}) \\tilde{w}_D\n",
-    "& - \\Psi_{ND}^T S_{NN} c_N^{\\mathrm{DF}} = 0 \\\\\n",
+    "& - \\Psi_{ND}^T S_{NN} c_N^{\\mathrm{RI}} = 0 \\\\\n",
     "\\Rightarrow (\\mathbf{H} + \\eta \\mathbb{I}_{DD}) \\tilde{w}_D\n",
     "& - \\vec{A} = 0\n",
     "\\end{aligned}\n",
@@ -1768,16 +1708,16 @@
     "\\Delta\\rho\n",
     "= \\left(\n",
     "    \\frac{\n",
-    "        \\sum_k \\int \\mathrm{d} \\vec{r} \\left| \\rho_k^\\mathrm{ML}(\\vec{r}) - \\rho_k^\\mathrm{DF}(\\vec{r}) \\right|^2\n",
+    "        \\sum_k \\int \\mathrm{d} \\vec{r} \\left| \\rho_k^\\mathrm{ML}(\\vec{r}) - \\rho_k^\\mathrm{RI}(\\vec{r}) \\right|^2\n",
     "    }{\n",
-    "        \\sum_k \\int \\mathrm{d} \\vec{r} \\left| \\rho_k^\\mathrm{DF}(\\vec{r}) - \\rho_k^\\mathrm{sph}(\\vec{r}) \\right|^2\n",
+    "        \\sum_k \\int \\mathrm{d} \\vec{r} \\left| \\rho_k^\\mathrm{RI}(\\vec{r}) - \\rho_k^\\mathrm{sph}(\\vec{r}) \\right|^2\n",
     "    }\n",
     "\\right)^{1/2}\n",
     "= \\left(\n",
     "    \\frac{\n",
-    "        \\sum_k \\left( c_k^\\mathrm{ML} - c_k^{\\mathrm{DF}} \\right)^\\top S_{k} \\left( c_k^\\mathrm{ML} - c_k^{\\mathrm{DF}} \\right)\n",
+    "        \\sum_k \\left( c_k^\\mathrm{ML} - c_k^{\\mathrm{RI}} \\right)^\\top S_{k} \\left( c_k^\\mathrm{ML} - c_k^{\\mathrm{RI}} \\right)\n",
     "    }{\n",
-    "        \\sum_k \\left( c_k^\\mathrm{DF} - c_k^{\\mathrm{sph}} \\right)^\\top S_{k} \\left( c_k^\\mathrm{DF} - c_k^{\\mathrm{sph}} \\right)\n",
+    "        \\sum_k \\left( c_k^\\mathrm{RI} - c_k^{\\mathrm{sph}} \\right)^\\top S_{k} \\left( c_k^\\mathrm{RI} - c_k^{\\mathrm{sph}} \\right)\n",
     "    }\n",
     "\\right)^{1/2}\n",
     "$$\n",
@@ -1919,39 +1859,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10f2b1ad-5cfa-4934-9602-98b5bf347dfa",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bd9662902b3640a6a9379ab5b2dc7306",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(IntSlider(value=0, continuous_update=False, description='Snapshot Index', max=10), Outpu…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<function __main__.<lambda>(index)>"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "id": "ec745d1b",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "\"\"\" Visualize the test dataset structures using ase, use scrollbar to zoom in and out \"\"\"\n",
     "\n",
